# KeepIt

./: .gitignore  DetectLanes  README.md  laneDetector.cpp  main.cpp
Pico_Src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
Pico_Src/ProjectFiles/: CMakeLists.txt  main.c
Pico_Src/ProjectFiles/headers/: current_filter.h  i2c0_slave.h  motor_pwm.h  rtos_tasks.h
Schematics/: README.md
Schematics/Chassis_and_direction/: Base.SLDPRT  Bracket.step.SLDPRT  Knuckle_L.SLDPRT  Knuckle_R.SLDPRT  Raspberry.SLDPRT  Servo Motor MG996R.SLDPRT  Servo straight attachment.SLDPRT  Test_assembly.SLDASM  bms.SLDPRT  linkage.SLDPRT  pcb_kl25z.SLDPRT  side_linkage.SLDPRT
Schematics/LogicBoard - Pico/: LogicBoard-Pico.brd  LogicBoard-Pico.dxf
Schematics/PowerBoard/: PowerBoard.brd  PowerBoard.sch
Shematics/LogicBoard/: LogicBoard.brd  LogicBoard.sch
Shematics/LogicBoard - Pico/: LogicBoard-Pico.sch
Shematics/LogicBoard-KL25Z (DEPRECATED)/: LogicBoard.brd
Shematics/Logic_Board/: LogicBoard.b#1  LogicBoard.b#2  LogicBoard.b#3  LogicBoard.b#4  LogicBoard.b#5  LogicBoard.b#6  LogicBoard.b#7  LogicBoard.b#8  LogicBoard.b#9  LogicBoard.brd  LogicBoard.pro  LogicBoard.s#1  LogicBoard.s#2  LogicBoard.s#3  LogicBoard.sch  eagle.epf
Shematics/PowerBoard/: PowerBoard.brd  PowerBoard.sch
Src/: DetectLanes  Makefile  laneDetector.cpp  main.cpp
